--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,9 @@
 /* HackMD-like CSS Style */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Fira+Code:wght@400;700&display=swap');
-
+:root{
+  --normal-font-size: 16px;
+  --large-font-size: 22px;
+}
 /* --- Global layout --- */
 body {
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
@@ -8,8 +11,32 @@ body {
   padding: 0;
   color: #2b2b2b;
   background: #f8f9fa;
-  font-size: 16px;
+  font-size: var(--normal-font-size);
   text-align: justify;
+}
+
+.landing{
+  display: flex;
+  flex-direction: column;
+  gap: 8px; 
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+  font-size: var(--large-font-size);
+  color: #2b2b2b;  
+  font-weight: bold;
+  box-sizing: border-box;
+}
+
+
+.landing div:last-child{
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  font-weight: normal;
+  font-size: small;
+  color: #9c9c9c;
 }
 
 footer{
