--- a/public/style.css
+++ b/public/style.css
@@ -154,6 +154,10 @@ footer img{
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
 }
 
+.markdown-body img{
+  max-width: 100%;
+}
+
 .markdown-body h1,
 .markdown-body h2, 
 .markdown-body h3, 
