--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,8 @@
   --normal-font-size: 16px;
   --large-font-size: 22px;
   --toc-font-size: 11px;
+  --tag-background-color: #f7f7f7;
+  --tag-font-size: x-small;
 }
 /* --- Global layout --- */
 body {
@@ -108,6 +110,30 @@ footer img{
   color: #2b2b2bf4;
   border-bottom: 1px solid #71717a4d !important;
   font-size:large;
+}
+
+/* pill like tags */
+.markdown-toc-tags{
+  display: flex;
+  justify-content: right;
+	gap: 8px;
+	width: 100%;
+  flex-wrap: wrap;
+  padding-top: 8px;
+  border: 0px solid red;
+}
+/* Tag */
+.markdown-toc-tags div{
+	gap: 4px;
+  font-size: var(--tag-font-size);
+	border-radius: 12px;
+  padding: 4px 6px;
+	background: var(--tag-background-color);
+  color: #2b2b2bf4;
+  font-weight: bold;
+	/* color: #2f3947; */
+  /* color: var(--dashboard-pill-text-color); */
+	box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .08);
 }
 
 .markdown-toc-logo img{
