--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,8 @@
   --toc-font-size: 11px;
   --tag-background-color: #f7f7f7;
   --tag-font-size: x-small;
+  --blockquote-border-color: #e4e4e7;
+  --blockquote-text-color: #71717a;
 }
 /* --- Global layout --- */
 body {
@@ -16,6 +18,13 @@ body {
   background: #f8f9fa;
   font-size: var(--normal-font-size);
   text-align: justify;
+}
+
+blockquote{
+  border-left: 5px solid var(--blockquote-border-color);
+  padding-left: 8px;
+  margin: 0px;
+  color: var(--blockquote-text-color);
 }
 
 .landing{
