--- a/public/style.css
+++ b/public/style.css
@@ -11,6 +11,7 @@
   --footer-font-size: 13px;
   --update-datetime-font-size: 12px;
   --footer-font-color: #71717a;
+  --code-font-size: small;
 }
 /* --- Global layout --- */
 body {
@@ -23,11 +24,22 @@ body {
   text-align: justify;
 }
 
+/* --- Pre and code --- */
+pre{
+  max-width: 100%;
+  font-size: var(--code-font-size);
+  border: 1px solid #e4e4e7;
+  padding: 4px;
+  overflow-x: auto;
+}
+
+/* --- blockquote --- */
 blockquote{
   border-left: 5px solid var(--blockquote-border-color);
   padding-left: 8px;
   margin: 0px;
   color: var(--blockquote-text-color);
+  max-width: 100%;
 }
 
 .landing{
@@ -322,6 +334,7 @@ mark{
   .layout {
     grid-template-columns: 1fr; /* single column */
     padding: 18px;
+    max-width: 100%;
   }
 
   .markdown-body {
@@ -329,7 +342,18 @@ mark{
     margin: 20px auto;
     padding: 12px;
     max-width: 98%;
+    width: 100%;
+    box-sizing: border-box;
+  }
+  
+  .markdown-body pre {
+    max-width: 100%;
+    overflow-x: auto;
+    box-sizing: border-box;
+  }
+  
+  .markdown-body pre code{
+    max-width: 100%;
+    display: block;
   }
 }
-
-
