--- a/public/style.css
+++ b/public/style.css
@@ -338,7 +338,7 @@ footer img{
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .08);
 }
 
-/* Mobile-first: ajustar layout para ecrãs pequenos */
+/* Mobile view */
 @media (max-width: 1024px) {
   body{background-color: #fff;}
   /* body{background-color: yellow;} */
@@ -367,6 +367,6 @@ footer img{
 @media (min-width: 769px) and (max-width: 1200px) { }
 */
 
-/* Desktop: all visible tudo visível
+/* Desktop: all visible
 @media (min-width: 1201px) { }
  */
