Fix container references style

--- a/public/style.css
+++ b/public/style.css
@@ -316,7 +316,8 @@ footer img{
 
 .container.references{
   display: flex;
-  justify-content: center;
+  justify-content: left;
+  align-content: ;
   padding: 8px 15px;
   align-items: center;
   background-color: #f8f9fa;
